Update 'ewvokom7j-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:25a93d2a3a2a484cac00ecf662995132905e1015@sha256:b8505c927d932720cc1caec5dde999605ec0d493ce84388387ffc12fe27852f4

--- a/components/ewvokom7j-python/overlays/development/deployment-patch.yaml
+++ b/components/ewvokom7j-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ewvokom7j-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:25a93d2a3a2a484cac00ecf662995132905e1015@sha256:b8505c927d932720cc1caec5dde999605ec0d493ce84388387ffc12fe27852f4
+          name: container-image
